--- a/free-code-camp-tribute-page.html
+++ b/free-code-camp-tribute-page.html
@@ -21,6 +21,7 @@
           Jocko Willink a former Navy Seal, a Leadership author, speaker and
           host of the top-rated Jocko podcast.
         </p>
+        <!-- message -->
 
         <p id="tribute-info">
           John Gretton "Jocko" Willink (born September 8, 1971)[2] is an
